build(release): prepare for v0.1.0
Actualiza la versión del proyecto a 0.1.0 en pom.xml, agrega la entrada correspondiente en CHANGELOG.md y actualiza README.md con las nuevas versiones de dependencias y configuración migrada a Consul.

Además, refactoriza controladores y servicios para usar @RequiredArgsConstructor de Lombok, migra la biblioteca PDF de lowagie a openpdf, mejora el logging y añade la clase utilitaria Jsonifier.

Closes #41