@@ -2,11 +2,12 @@ package um.haberes.report.service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.json.JsonMapper;
-import com.lowagie.text.*;
-import com.lowagie.text.pdf.PdfPCell;
-import com.lowagie.text.pdf.PdfPTable;
-import com.lowagie.text.pdf.PdfPageEventHelper;
-import com.lowagie.text.pdf.PdfWriter;
+import lombok.RequiredArgsConstructor;
+import org.openpdf.text.*;
+import org.openpdf.text.pdf.PdfPCell;
+import org.openpdf.text.pdf.PdfPTable;
+import org.openpdf.text.pdf.PdfPageEventHelper;
+import org.openpdf.text.pdf.PdfWriter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
@@ -27,19 +28,13 @@ import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class TotalesCodigoService {
 
     private final Environment environment;
     private final CodigoClient codigoClient;
     private final TotalNovedadClient totalNovedadClient;
     private final TotalItemClient totalItemClient;
-
-    public TotalesCodigoService(CodigoClient codigoClient, TotalNovedadClient totalNovedadClient, Environment environment, TotalItemClient totalItemClient) {
-        this.environment = environment;
-        this.codigoClient = codigoClient;
-        this.totalNovedadClient = totalNovedadClient;
-        this.totalItemClient = totalItemClient;
-    }
 
     public String generate(Integer anho, Integer mes) {
         String path = environment.getProperty("path.files");
@@ -93,7 +88,7 @@ public class TotalesCodigoService {
             codigos = codigos.stream()
                     .filter(Objects::nonNull) // Asegurarse de no tener valores nulos
                     .sorted(Comparator.comparing(CodigoDto::getCodigoId)) // Ordenar por codigoId
-                    .collect(Collectors.toList());
+                    .toList();
 
             Map<Integer, TotalNovedadDto> totalesNovedad = totalNovedadList.stream()
                     .filter(Objects::nonNull)
@@ -106,14 +101,14 @@ public class TotalesCodigoService {
                     .collect(Collectors.toMap(TotalItemDto::getCodigoId, total -> total));
 
             for (CodigoDto codigo : codigos) {
-                logCodigo(codigo);
+                log.debug("Codigo -> {}", codigo.jsonify());
                 var totalNovedad = BigDecimal.ZERO;
                 var totalItem = BigDecimal.ZERO;
                 if (totalesNovedad.containsKey(codigo.getCodigoId())) {
                     totalNovedad = totalesNovedad.get(codigo.getCodigoId()).getTotal();
                 }
                 // Verificar si el totalNovedad es nulo o cero antes de procesarlo
-                if (totalNovedad == null || totalNovedad.compareTo(BigDecimal.ZERO) == 0) {
+                if (totalNovedad.compareTo(BigDecimal.ZERO) == 0) {
                     continue;
                 }
                 if (totalesItem.containsKey(codigo.getCodigoId())) {
@@ -127,14 +122,6 @@ public class TotalesCodigoService {
 
         } catch (DocumentException | IOException e) {
             log.debug("Error generating report {}", e.getMessage());
-        }
-    }
-
-    private void logCodigo(CodigoDto codigo) {
-        try {
-            log.debug("Codigo {}", JsonMapper.builder().findAndAddModules().build().writerWithDefaultPrettyPrinter().writeValueAsString(codigo));
-        } catch (JsonProcessingException e) {
-            log.debug("Error serializando el codigo {}", e.getMessage());
         }
     }
 
